styles.css
:root {
    --main-color: #effef7;
    --gameboard-border: 4px #1e293b solid;
    --gameboard-bg-color: #f8fafc;
    --std-border-radius: 24px;
    --btn-border: 2px #94a3b8 solid;
    --info-element-height: 40px;
    --std-transition-time: 800ms;

}

body {
    height: 100vh;
    background-color: var(--main-color);
}

.container {
    font-family: "Roboto", sans-serif;
    height: 100%;
    display: grid;
    grid-template-rows: auto 1fr auto auto 1.5fr;
    justify-items: center;
}

.intro-section {
  grid-row: 1 / 2;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 3rem;
}

.title {
    font-family: "Righteous", sans-serif;
}

.main-content {
    grid-row: 3 / 4;
    display: grid;
    grid-template-columns: 1fr auto 1fr;
    grid-template-rows: 150px auto;
    column-gap: 2rem;
    justify-items: center;
}

/* .main-content, .last-row {
  opacity: 0;
  visibility: hidden;
  transition: opacity 1s linear;
}

.visible {
  opacity: 1;
  visibility: visible;
} */

/* Input Section */
.input-section, .output-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
}

.name-field {
  height: var(--info-element-height);
  padding: 0 1rem;
  border-radius: 8px;
  border: var(--btn-border);
}

.confirm-btn {
  height: var(--info-element-height);
  width: 120px;  
  background-color: var(--gameboard-bg-color);
  border-radius: var(--std-border-radius);
  border: var(--btn-border);
}

.confirm-btn:hover {
  background-color: #3b82f6;
  color: white;
  border-color: white;
  transition-duration: var(--std-transition-time);
}

.player-x-info {
    justify-self: right;
    grid-row: 2 / 3;
    grid-column: 1 / 2; 
}

.player-o-info {
    justify-self: left;
    grid-row: 2 / 3;
    grid-column: -2 / -1; 
}

.bold {
  font-weight: bold;
}

.hidden {
  display: none;
}

.alert {
  color: red;
  margin: 0;
}

/* Output Section */

.output-section {
  font-size: 1.5rem;
}

.output-section > p {
  margin: 0;
}

/* Gameboard */

.gameboard {
    grid-row: 1 / 3;
    grid-column: 2 / 3;
    display: grid;
    background-color: var(--gameboard-bg-color);
    grid-template-rows: repeat(3, 150px);
    grid-template-columns: repeat(3, 150px);
    padding: 2rem;
    border: #94a3b8 solid 2px;
    border-radius: var(--std-border-radius);
}

.cell {
    background-color: inherit;
    border: none;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 72px;
    font-weight: bold;
    border-right: var(--gameboard-border); /* Internal vertical borders */
    border-bottom: var(--gameboard-border); /* Internal horizontal borders */
    color: transparent;
    transition: color 0.2s ease-in-out;
  }
  
  .cell:nth-child(3), .cell:nth-child(6), .cell:nth-child(9) {
    border-right: none; /* Remove right border for last column cells */
  }
  
  .cell:nth-child(7), .cell:nth-child(8), .cell:nth-child(9) {
    border-bottom: none; /* Remove bottom border for last row cells */
  }

  .token-x {
    color: #991b1b;
  }

  .token-o {
    color: #166534;
  }

  /* Last row */

  .last-row {
    margin-top: 2rem;
    grid-row: 4 / 5;
    place-self: center;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 1rem;
  }

  .result {
    font-size: 2rem;
    font-weight: bold;
    opacity: 0;
    transition: opacity 0.5s ease-in-out;
  }

  .result.show {
    opacity: 1;     
  }

  .start-btn, .restart-btn {
    height: 60px;
    width: 120px;
    background-color: var(--gameboard-bg-color);
    border-radius: var(--std-border-radius);
    border: var(--btn-border);
  }

  .start-btn:hover, .restart-btn:hover {
    background-color: #fcd34d;
    transition-duration: var(--std-transition-time);
  }

